<?xml version="1.0" encoding="utf-8"?>

<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
<!--Licensed under LGPL, Version 3-->

<resources>

    <string name="app_name">BodyApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saved">Saved</string>
    <string name="title_activity_view_saved">Saved</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_create">Create</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="email">e-mail</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="unit">Unit</string>
    <string name="title_activity_measurement">MeasurementActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="centimeter">centimeter (cm)</string>
    <string name="inch">Inch</string>
    <string name="help">\?</string>
    <string name="head_girth">Head girth</string>
    <string name="head_and_neck_length">Head and Neck length</string>
    <string name="across_back_shoulder_width">Across back shoulder width</string>
    <string name="shoulder_drop">Shoulder drop</string>
    <string name="shoulder_slope_degrees">Shoulder slope degrees</string>
    <string name="shoulder_length">Shoulder length</string>
    <string name="shoulder_and_arm_length">Shoulder and arm length</string>
    <string name="mid_neck_girth">Mid neck girth</string>
    <string name="bust_girth">Bust girth</string>
    <string name="upper_chest_girth">Upper chest girth</string>
    <string name="arm_length">Arm length</string>
    <string name="upper_arm_girth">Upper arm girth</string>
    <string name="armscye_girth">Armscye girth</string>
    <string name="wrist_girth">Wrist girth</string>
    <string name="hip_girth">Hip girth</string>
    <string name="waist_girth">Waist girth</string>
    <string name="height">Height</string>
    <string name="hip_height">Hip height</string>
    <string name="heights">Heights</string>
    <string name="shoulders">Shoulders</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="chest">Chest</string>
    <string name="foot">Foot</string>
    <string name="hand">Hand</string>
    <string name="head">Head</string>
    <string name="hip_and_waist">Hip and Waist</string>
    <string name="leg">Leg</string>
    <string name="neck">Neck</string>
    <string name="notes">Notes</string>
    <string name="pics">Pics</string>
    <string name="front">Front</string>
    <string name="side">Side</string>
    <string name="back">Back</string>
    <string name="trunk">Trunk</string>
    <string name="person">Person</string>
    <string name="arm">Arm</string>
    <string name="new_string">New</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="get_hdf">Get HDF</string>
    <string name="save">Save</string>
    <string name="arm_type">Arm type</string>
    <string name="normal">Normal</string>
    <string name="muscular_and_developed">Muscular and developed</string>
    <string name="large_not_muscular">Large, not muscular</string>
    <string name="normal_flat_chest">Normal flat chest</string>
    <string name="collapsed_chest">Collapsed chest</string>
    <string name="large_and_sagging">Large and sagging</string>
    <string name="chest_type">Chest type</string>
    <string name="shoulder_type">Shoulder type</string>
    <string name="square_shoulders">Square shoulders</string>
    <string name="normal_shoulders">Normal shoulders</string>
    <string name="sloping_shoulders">Sloping shoulders</string>
    <string name="back_shape">Back shape</string>
    <string name="flat_stomach">Flat stomach</string>
    <string name="slight_stomach">Slight stomach</string>
    <string name="protruding_stomach">Protruding stomach</string>
    <string name="stomach_shape">Stomach shape</string>
    <string name="hunched">Hunched</string>
    <string name="erect">Erect</string>
    <string name="slight_forward_stoop">Slight forward stoop</string>
    <string name="curved_upper_back">Curved upper back</string>
    <string name="camera">Camera</string>
    <string name="from_file">From file</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="cm">cm</string>
    <string name="delete_msg">This measurement will be deleted permanently. Are you sure?</string>
    <string name="sync_needed">Sync needed</string>
    <string name="sync_needed_msg">You have to sync before getting HDF!</string>
    <string name="close">Close</string>
    <string name="dob">Date of birth</string>


</resources>
