<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
<!--Licensed under LGPL, Version 3-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/person"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/vsa_txt_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/vsa_txt_person_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/vsa_txt_person_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/neck"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/vsa_txt_mid_neck_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
       
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/shoulders"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vsa_txt_across_back_shoulder_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
         <TextView
            android:id="@+id/vsa_txt_shoulder_drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        <TextView
            android:id="@+id/vsa_txt_shoulder_slope_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        
         <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/chest"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vsa_txt_bust_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/arm"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vsa_txt_arm_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
         <TextView
            android:id="@+id/vsa_txt_upper_arm_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        <TextView
            android:id="@+id/vsa_txt_armscye_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        <TextView
            android:id="@+id/vsa_txt_wrist_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        
         <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/hip_and_waist"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vsa_txt_hip_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
         <TextView
            android:id="@+id/vsa_txt_waist_girth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
         
          <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_color"
            android:text="@string/heights"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vsa_txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
         <TextView
            android:id="@+id/vsa_txt_hip_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
       
    </LinearLayout>

</ScrollView>