<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
<!--Licensed under LGPL, Version 3-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="org.fashiontec.bodyapps.main.CreateActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical" 
            android:layout_weight=".07">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:gravity="center"
            android:weightSum="1.0" 
            android:layout_weight=".66">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/create_txt_gmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/create_txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:inputType="textFilter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:layout_weight=".35"/>

                    <TextView
                        android:id="@+id/create_txt_dob"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight=".5"/>
                    <Button
                        android:id="@+id/create_btn_dob"
                        style="@style/btnStyleios"
                        android:layout_width="0dip"
                        android:layout_height="28dip"
                        android:text="iii"
                        android:textColor="@drawable/btn_txt"
                        android:layout_weight=".15"
                        android:gravity="top|center" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1.0" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" 
                        android:layout_weight=".3"/>

                    <Spinner
                        android:id="@+id/create_spn_gender"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1.0" >

                    <TextView
                        android:id="@+id/vsa_txt_mid_neck_girth"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/unit" 
                        android:layout_weight=".3"/>

                    <Spinner
                        android:id="@+id/create_spn_unit"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical" 
            android:layout_weight=".06">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight=".15"
            android:weightSum="1.0"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/create_btn_create"
                    style="@style/btnStyleios"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:text="@string/create"
                    android:textColor="@drawable/btn_txt" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

