<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
<!--Licensed under LGPL, Version 3-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest"
            android:textColor="#F09918"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bust_girth"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:textColor="#d06516" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <EditText
                android:id="@+id/bust_girth"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="numberDecimal">

                <requestFocus />
            </EditText>

            <!--<Button-->
                <!--android:id="@+id/btn_bust_girth"-->
                <!--android:layout_width="0dip"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight=".2"-->
                <!--android:text="@string/help" />-->

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upper_chest_girth"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:textColor="#d06516" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <EditText
                android:id="@+id/upper_chest_girth"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="numberDecimal">

            </EditText>

            <!--<Button-->
                <!--android:id="@+id/btn_upper_chest_girth"-->
                <!--android:layout_width="0dip"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight=".2"-->
                <!--android:text="@string/help" />-->

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest_type"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:textColor="#d06516" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >
            <Spinner
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:id="@+id/chest_type" />
            <!--<Button-->
            <!--android:id="@+id/btn_wrist_girth"-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight=".2"-->
            <!--android:text="@string/help" />-->
        </LinearLayout>
    </LinearLayout>

</ScrollView>